array.island.Island.scala.code
/*Récupérer taille du tableau 
faire un tableau des altitudes inférieures, on parcours le tableau principal.
si on trouve une altitude déjà rencontrée on l'enlève du tableau secondaire. Si c'est notre altitudes on ne fait rien. Si on trouve une altitude supérieure , on ajoute notre altitude au tableau secondaire.
On incrémente le compteur de niveau à chaque fois que l'on ajoute un élément au tableau.
*/
def island(num:Array[Int]): Int = {
  var x:Int=num.length
  var compteur:Int=0
  var actuel:Int=num(0)
  for (i <- 1 to (x-1)){
    if (num(i)>actuel){
      actuel=num(i)
      compteur= compteur + 1
      
    }
  }
}